# hackathon-kiro-AI

./: .gitignore  .gitmodules  Invoke-EmBuild.ps1  README.md
.kiro/specs/cmake-project-setup/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
.kiro/specs/emscripten-build-missing-files/: .config.kiro  bugfix.md  design.md  tasks.md  tasks.meta.json
.kiro/specs/menu-3d-models/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
.kiro/steering/: product.md  structure.md  tech.md
client/: CMakeLists.txt
client/src/: CMakeLists.txt  main.cpp  shell.html
client/src/game/: CMakeLists.txt  camera.cpp  camera.hpp  hazards.cpp
client/src/net/: CMakeLists.txt
client/src/ui/: CMakeLists.txt  screens.cpp  screens.hpp  ui.hpp
client/src/utils/: CMakeLists.txt
client/tests/: CMakeLists.txt  README.md  test_error_conditions.cmake  test_integration_build.cmake  test_preservation_config.cmake  verify_structure.cmake
client/tests/game/: test_camera_property1.cpp  test_camera_property2.cpp  test_camera_property3.cpp  test_camera_property4.cpp  test_camera_property5.cpp  test_camera_property6.cpp
client/tests/stubs/: raylib.h
